CUDA用トーチ用txtやエンべリングモデルの変更

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1078,7 +1078,7 @@
                     }
                 }
 
-                const ragPipelineName = "raptor_experiment";
+                const ragPipelineName = "hybrid_search_experiment";
                 const patientId = "{{ patient_data.patient_id }}";
                 const therapistNotes = "{{ therapist_notes|urlencode }}";
                 const queryParams = `?patient_id=${patientId}&therapist_notes=${therapistNotes}`;
