ゆうせい リハビリ ブランチ (#49)
* エクセルのフォーマットの調整・Excelに書き込むときの関節可動域のチェックボックスの記入漏れのバグ対応

* FIMの数値で1のときにチェックボックスが入力されるバグの修正)

* チェックボックスのルールを変更

* 匿名化強化

* 参照情報が邪魔なので最小化できるようにした。

* mainブランチとのコンフリクトを解消するためにconfirmを変更

* logでLLMに渡しているプロンプトの内容を取得できるようにした。

* RAGの検索に使う情報を増やした。

---------

Co-authored-by: YouSayH <yumaha1006@gmail.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>リハビリテーション実施計画書 自動作成システム</title>
+    <title>リハビリテーション総合実施計画書 自動作成システム</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1>リハビリテーション実施計画書 自動作成システム</h1>
+            <h1>リハビリテーション総合実施計画書 自動作成システム</h1>
 
             {% if current_user.is_authenticated %}
             <div class="user-info">
