--- a/templates/edit_patient_info.html
+++ b/templates/edit_patient_info.html
@@ -263,7 +263,7 @@
                 <table>
                     <tbody>
                         <tr>
-                            <th colspan="3">リハビリテーション実施計画書</th>
+                            <th colspan="3">リハビリテーション総合実施計画書</th>
                         </tr>
                         <tr>
                             <td style="width: 33%;">患者氏名: <input type="text" id="name" name="name" class="input-field"
@@ -1362,12 +1362,12 @@
                         </tr>
                         <tr>
                             <td style="height: 150px;">
-                                <b>治療方針（リハビリテーション実施方針）</b>
+                                <b>治療方針（リハビリテーション総合実施方針）</b>
                                 <textarea name="policy_treatment_txt" class="input-field readonly-placeholder"
                                     style="height: 120px;" readonly>（この項目はAIが自動生成します）</textarea>
                             </td>
                             <td style="height: 150px;">
-                                <b>治療内容（リハビリテーション実施内容）</b>
+                                <b>治療内容（リハビリテーション総合実施内容）</b>
                                 <textarea name="policy_content_txt" class="input-field readonly-placeholder"
                                     style="height: 120px;" readonly>（この項目はAIが自動生成します）</textarea>
                             </td>
