--- a/templates/liked_item_detail_view.html
+++ b/templates/liked_item_detail_view.html
@@ -250,7 +250,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <th colspan="3">リハビリテーション実施計画書</th>
+                        <th colspan="3">リハビリテーション総合実施計画書</th>
                     </tr>
                     <tr>
                         <td style="width: 33%;">患者氏名: <span class="value-text">{{ plan.name or '' }}</span></td>
@@ -981,7 +981,7 @@
                     </tr>
                     <tr>
                         <td style="height: 150px;" class="{{ 'liked-item' if details_map.get('policy_treatment_txt') and details_map.get('policy_treatment_txt').liked_model }}">
-                            <b>治療方針（リハビリテーション実施方針）</b>
+                            <b>治療方針（リハビリテーション総合実施方針）</b>
                             <div class="value-text">{{ plan.policy_treatment_txt or '' }}</div>
                             {% if details_map.get('policy_treatment_txt') %}
                                 {% set detail = details_map.get('policy_treatment_txt') %}
@@ -996,7 +996,7 @@
                             {% endif %}
                         </td>
                         <td style="height: 150px;" class="{{ 'liked-item' if details_map.get('policy_content_txt') and details_map.get('policy_content_txt').liked_model }}">
-                            <b>治療内容（リハビリテーション実施内容）</b>
+                            <b>治療内容（リハビリテーション総合実施内容）</b>
                             <div class="value-text">{{ plan.policy_content_txt or '' }}</div>
                             {% if details_map.get('policy_content_txt') %}
                                 {% set detail = details_map.get('policy_content_txt') %}
