--- a/templates/view_plan.html
+++ b/templates/view_plan.html
@@ -128,7 +128,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <th colspan="3">リハビリテーション実施計画書</th>
+                        <th colspan="3">リハビリテーション総合実施計画書</th>
                     </tr>
                     <tr>
                         <td style="width: 33%;">患者氏名: <span class="value-text">{{ plan.name or '' }}</span></td>
@@ -718,11 +718,11 @@
                     </tr>
                     <tr>
                         <td style="height: 150px;">
-                            <b>治療方針（リハビリテーション実施方針）</b>
+                            <b>治療方針（リハビリテーション総合実施方針）</b>
                             <div class="value-text">{{ plan.policy_treatment_txt or '' }}</div>
                         </td>
                         <td style="height: 150px;">
-                            <b>治療内容（リハビリテーション実施内容）</b>
+                            <b>治療内容（リハビリテーション総合実施内容）</b>
                             <div class="value-text">{{ plan.policy_content_txt or '' }}</div>
                         </td>
                     </tr>
